--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-232.4KB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-922.1KB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-351.8KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.82MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-3.88MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.84MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.62MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.46MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-593.3KB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.88MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-766.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-558.6KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-503.5KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-434.2KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-321.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-203.0KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-232.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-922.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-766.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-232.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-922.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-766.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-232.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-922.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-766.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-232.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-922.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-766.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-232.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-922.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-766.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-232.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-922.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-766.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-232.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-922.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-916.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-593.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-766.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-558.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-434.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
