--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-554.6KB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.43MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-228.8KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-503.5KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.69MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-321.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-203.0KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
+  - {name: 🇺🇸 美国-705.6KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-691.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-3.48MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-412.1KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
   - {name: 🇨🇳 中国-2.47MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-963.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇬🇧 英国-1004.1KB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇦🇺 澳大利亚-454.5KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-554.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-963.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1004.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-554.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-963.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1004.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-554.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-963.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1004.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-554.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-963.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1004.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-554.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-963.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1004.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-554.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-963.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1004.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-554.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-228.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-321.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-705.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-412.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-963.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1004.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
